--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
+:root{
+    --imagem-fundo: url(Front End - Zumba\atividade1\img)
+}
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#trocarfoto{
+    padding: 8px 16px;
+    font-size: 32px;
+    cursor: pointer;
+    background-image: var(--imagem-fundo);
 }
